# parquet-playground-rs

./: Cargo.toml  README.md  build.rs
flatbuffers/: histogram.fbs
scripts/: gen_syntetic_data.py  process.sh
src/: columns_builder.rs  errors.rs  flatbuffers.rs  lib.rs  logger.rs  main.rs  model.rs  schema.rs  vec_pq_reader.rs
