[package]
name = "parquet-playground-rs"
version = "0.1.6"
edition = "2021"

[[bin]]
name = "js2pq"
path = "src/bin/js2pq/main.rs"

[[bin]]
name = "parqbench"
path = "src/bin/parqbench/main.rs"

[dependencies]
arrow = "54.1.0"
chrono = "0.4.39"
clap = { version = "4", features = ["derive"] }
flatbuffers = "25"
flate2 = "1"
parquet = "54.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
thiserror = "2"
tracing = "0.1"
tracing-subscriber= { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[target.'cfg(target_env = "msvc")'.dependencies]
snmalloc-rs = "0.3"

[build-dependencies]
flatc-rust = "0.2.0"

[dev-dependencies]
tempfile = "3"
